--- a/pages/landing/index.module.scss
+++ b/pages/landing/index.module.scss
@@ -12,3 +12,168 @@
   font-size: 3rem;
   font-weight: 600;
 }
+
+.inputContainer {
+  width: 50rem;
+  height: 30rem;
+  border: 0.3rem black solid;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.temperatureContainer {
+  height: 100%;
+  width: 50%;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.temperatureHeader {
+  margin-top: 2rem;
+  font-size: 2rem;
+  color: white;
+}
+
+.temperatureButton {
+  height: 3.6rem;
+  width: 16rem;
+  background-color: white;
+  margin-bottom: 2rem;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  transition: transform 0.3s;
+}
+
+.temperatureButton:hover {
+  transform: rotate(5deg);
+  cursor: pointer;
+}
+
+.temperatureSliderContainer {
+  width: 15rem;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.temperatureSliderValue {
+  color: white;
+  font-size: 2rem;
+}
+
+.temperatureSlider {
+  height: 80px;
+}
+
+.temperatureSlider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 0.2rem solid #ffffff;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #000000;
+  cursor: pointer;
+  margin-top: -1rem;
+  transition: transform 0.3s;
+}
+
+.temperatureSlider::-webkit-slider-thumb:hover {
+  transform: rotate(10deg);
+  cursor: pointer;
+}
+
+.temperatureSlider::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 0.2rem;
+  cursor: pointer;
+  background: white;
+  border-radius: 1.3px;
+  border: 0.2px solid #fefefe;
+}
+
+.humidityContainer {
+  height: 100%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.humidityHeader {
+  margin-top: 2rem;
+  font-size: 2rem;
+  color: black;
+}
+
+.humidityButton {
+  height: 3.6rem;
+  width: 16rem;
+  background-color: black;
+  margin-bottom: 2rem;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  transition: all 0.3s;
+}
+
+.humidityButton:hover {
+  transform: rotate(-5deg);
+  cursor: pointer;
+}
+
+.humiditySliderContainer {
+  width: 15rem;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.humiditySlider {
+  height: 80px;
+}
+
+.humiditySliderValue {
+  color: black;
+  font-size: 2rem;
+}
+
+.humiditySlider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 0.2rem solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+  margin-top: -1rem;
+  transition: transform 0.3s;
+}
+
+.humiditySlider::-webkit-slider-thumb:hover {
+  transform: rotate(10deg);
+  cursor: pointer;
+}
+
+.humiditySlider::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 0.2rem;
+  cursor: pointer;
+  background: black;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
